--- a/Polynoidae_phylogeny_report.Rmd
+++ b/Polynoidae_phylogeny_report.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "Comparing models of molecular evolution for phylogenetic analysis of the scale worm family Polynoidae"
-author: "Jason Moggridge 1159229"
+author: "Jason Moggridge"
 date: "10/12/2020"
 bibliography: polynoid_refs.bib
 output: 
-  github_document:
-    toc: true
-    toc_depth: 3
-urlcolor: blue
+  rmdformats::downcute:
+      self_contained: true
+      thumbnails: true
+      lightbox: true
+      gallery: false
+      highlight: kate
 ---
 
 ----
@@ -393,10 +395,16 @@ raw_k80.plot <- dist.df %>%
 ts_tv.plot <- dist.df %>%
   select(k80, TS, TV) %>%
   # manipulate table into long-form
-  pivot_longer(cols=c(TS, TV),
-               names_to = 'Substitution', values_to = 'Proportion') %>%
+  pivot_longer(cols = c(TS, TV),
+               names_to = 'Substitution',
+               values_to = 'Proportion') %>%
   # create scatterplot w smooth fits
-  ggplot(aes(x = k80, y = Proportion, color = Substitution, group = Substitution)) +
+  ggplot(aes(
+    x = k80,
+    y = Proportion,
+    color = Substitution,
+    group = Substitution
+  ))+
   geom_point(size=0.04, alpha = 0.3) +
   geom_smooth(method = 'loess', formula = 'y~x', se=FALSE) +
   theme_classic() +
@@ -414,30 +422,48 @@ DECIPHER has no implementation of the GTR+I+G model, so I wondered how it's chos
 
 ```{r ML clustering with decipher, message=FALSE}
 ## Maximum-likelihood hierarchical clustering
-clusters.ML <- DECIPHER::IdClusters(
-  myXStringSet = polynoids.align,
-  myDistMatrix = DistanceMatrix(polynoids.align, type='dist'),
-  method = 'ML',  cutoff = 0.2, showPlot = FALSE, type = "both", verbose = FALSE)
-clusters.Dist <- DECIPHER::IdClusters(
-  myXStringSet = polynoids.align,
-  myDistMatrix = DistanceMatrix(polynoids.align, type='dist'),
-  model = 'TN93', method = 'NJ', cutoff = 0.2, showPlot = FALSE, type = "both", verbose = FALSE)
+clusters.ML <- 
+  DECIPHER::IdClusters(
+    myXStringSet = polynoids.align,
+    myDistMatrix = DistanceMatrix(polynoids.align, type = 'dist'),
+    method = 'ML',
+    cutoff = 0.2,
+    showPlot = FALSE,
+    type = "both",
+    verbose = FALSE
+  )
+clusters.Dist <- 
+  DECIPHER::IdClusters(
+    myXStringSet = polynoids.align,
+    myDistMatrix = DistanceMatrix(polynoids.align, type = 'dist'),
+    model = 'TN93', 
+    method = 'NJ', 
+    cutoff = 0.2, 
+    showPlot = FALSE, 
+    type = "both", 
+    verbose = FALSE
+  )
 ```
 
 ```{r tanglegram, fig.height=6, fig.width=7}
 # library(phylogram)
 dend.list <- dendlist(
-    clusters.Dist[[2]] %>% set('labels_cex', 0.65) %>%
+    clusters.Dist[[2]] %>%
+      set('labels_cex', 0.65) %>%
       set("branches_lwd", 1),
-    clusters.ML[[2]] %>% set('labels_cex', 0.65) %>%
+    clusters.ML[[2]] %>% 
+      set('labels_cex', 0.65) %>%
       set("branches_lwd", 1)
     ) %>%
   dendextend::untangle() %>% 
 # Make tanglegram
   tanglegram(
-    main_right = 'ML, TN93+G model', main_left = 'dist-based, TN93 model',
-    match_order_by_labels = TRUE, just_one = TRUE,
-    columns_width = c(6, 1, 6), left_dendo_mar = c(2, 2, 2, 6),
+    main_right = 'ML, TN93+G model', 
+    main_left = 'dist-based, TN93 model',
+    match_order_by_labels = TRUE, 
+    just_one = TRUE,
+    columns_width = c(6, 1, 6), 
+    left_dendo_mar = c(2, 2, 2, 6),
     right_dendo_mar = c(2, 6, 2, 2)
   )
 ```
@@ -472,13 +498,5 @@ In preparing this work, I found the following tutorials, vignettes, and document
   - [Introduction to `dendextend` by T. Galili](https://cran.r-project.org/web/packages/dendextend/vignettes/dendextend.html)  
   - [Genetic data analysis using R: introduction to phylogenetics by T. Jombart](http://adegenet.r-forge.r-project.org/files/MRC-session2-tuto.1.3.pdf)
 
-----
 
-#### Books and Journal Articles
-  
-  - *NB: Any articles not available through the University of Guelph subscriptions were shamelessly pirated through [sci-hub.tw](https://scihubtw.tw/)*
-
-
-  
-  
   
